--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>HelloAPI</title>
+    <link rel="icon" href="./images/clapperboard.png" type="image/gif" sizes="16x16">
+    <title>Filmaholic | Ratings en Reviews</title>
 </head>
 
 <body>
