--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <div id="app"></div>
     
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 
 </html>
