Added some styling to the index.html file

--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 </head>
 
 <body>
-    
-    <div id="app"></div>
-    
+    <header>
+        <h1>Filmaholic</h1>
+        <label for="">Search</label>
+        <input type="text" placeholder="Search movie..">
+    </header>
+    <main id="movie-template">
+    </main>
+
     <script src="script.js" defer></script>
 </body>
 
