--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
 
 <body>
     <header>
-        <h1>Filmaholic</h1>
-        <label for="">Search</label>
-        <input type="text" placeholder="Search movie..">
+        <nav>
+            <a href="#">Filmaholic</a>
+            <label for="">Search</label>
+            <input type="text" placeholder="Search movie..">
+        </nav>
+        <section>
+            <button>Sort by...</button>
+            <button>Filters</button>
+        </section>
     </header>
     <main id="movie-template">
     </main>
