Changed map structure

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./source/style.css">
     <link rel="icon" href="./images/clapperboard.png" type="image/gif" sizes="16x16">
+    <script src="./source/script.js" defer></script>
     <title>Filmaholic | Ratings en Reviews</title>
 </head>
 
@@ -23,8 +24,6 @@
     </header>
     <main id="movie-template">
     </main>
-
-    <script src="script.js" defer></script>
 </body>
 
 </html>
