Seperated code in some modules

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./source/style.css">
     <link rel="icon" href="./images/clapperboard.png" type="image/gif" sizes="16x16">
-    <script src="./source/script.js" defer></script>
     <title>Filmaholic | Ratings en Reviews</title>
 </head>
 
@@ -24,7 +23,8 @@
     </header>
     <main id="movie-template">
     </main>
-    <script src="./libraries/routie.js"></script>
+    <script src="/libraries/routie.js"></script>
+    <script src="/source/script.js" type="module"></script>
 </body>
 
 </html>
