Testing HTML script error

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </header>
     <main id="movie-template">
     </main>
-    <script src="/libraries/routie.js"></script>
-    <script src="/source/script.js" type="module"></script>
+    <script src="./source/libraries/routie.js"></script>
+    <script src="./source/script.js" type="module"></script>
 </body>
 
 </html>
