Fixed script error

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <main id="movie-template">
     </main>
-    <script src="./source/libraries/routie.js"></script>
+    <script src="/libraries/routie.js"></script>
     <script src="./source/script.js" type="module"></script>
 </body>
 
