Added detail page to routes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main id="movie-template">
     </main>
     <script src="/libraries/routie.js"></script>
-    <script src="./source/script.js" type="module"></script>
+    <script src="/source/script.js" type="module"></script>
 </body>
 
 </html>
