--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <a href="#">Filmaholic</a>
             <label for="">Search</label>
-            <input type="text" placeholder="Search movie..">
+            <input type="text" placeholder="Search movie.." id="filter-movies">
         </nav>
         <section>
             <button>Sort by...</button>
@@ -23,8 +23,8 @@
     </header>
     <main id="movie-template">
     </main>
-    <script src="/libraries/routie.js"></script>
-    <script src="/source/script.js" type="module"></script>
+    <script src="./source/script.js" type="module"> defer</script>
+    <script src="./libraries/routie.js"></script>
 </body>
 
 </html>
