Search input now console logs value

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <a href="#">Filmaholic</a>
             <label for="">Search</label>
-            <input type="text" placeholder="Search movie.." id="filter-movies">
+            <input type="text" placeholder="Search movie.." id="find-movies">
         </nav>
         <section>
             <button>Sort by...</button>
