Added full working filter function

--- a/index.html
+++ b/index.html
@@ -19,12 +19,26 @@
             <input type="text" placeholder="Search movie.." id="find-movies">
         </nav>
         <section>
-            <button>Sort by...</button>
+            <button class="sort">Sort by...</button>
             <button>Filters</button>
         </section>
     </header>
     <main id="movie-template">
     </main>
+    <!-- <div class="lds-spinner">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div> -->
 </body>
 
 </html>
