Added sorting by title name

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <input type="text" placeholder="Search movie.." id="find-movies">
         </nav>
         <section>
-            <button class="sort">Sort by...</button>
+            <button class="sort">Sort</button>
             <button>Filters</button>
         </section>
     </header>
     <main id="movie-template">
     </main>
-    <!-- <div class="lds-spinner">
+    <!-- <div id="lds-spinner">
         <div></div>
         <div></div>
         <div></div>
