Added more sorting options

--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
             <input type="text" placeholder="Search movie.." id="find-movies">
         </nav>
         <section>
-            <button class="sort">Sort</button>
+            <div class="dropdown">
+                <button class="dropbtn">Sort</button>
+                <div class="dropdown-content">
+                  <button class="alphabetical">Alphabetical</button>
+                  <button class="vote-average">Votes</button>
+                  <button class="release-date">Date</button>
+                </div>
+              </div>
             <button>Filters</button>
         </section>
     </header>
