--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav>
-            <a href="#">Filmaholic</a>
+            <a href="index.html">Filmaholic</a>
             <label for="">Search</label>
             <input type="text" placeholder="Search movie.." id="find-movies">
         </nav>
@@ -32,7 +32,7 @@
     </header>
     <main id="movie-template">
     </main>
-    <!-- <div id="lds-spinner">
+    <div id="lds-spinner">
         <div></div>
         <div></div>
         <div></div>
@@ -45,7 +45,7 @@
         <div></div>
         <div></div>
         <div></div>
-    </div> -->
+    </div>
 </body>
 
 </html>
