Added comments for clearer code

--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
             <button>Filters</button>
         </section>
     </header>
+
+    <!-- HTML gets rendered here -->
     <main id="movie-template">
     </main>
+
+    <!-- loading state, hides when api is loaded -->
     <div id="lds-spinner">
         <div></div>
         <div></div>
